# nrf52_sht30_sensor

./: LICENSE  README.md
application/: CMakeLists.txt  custom_board.h  main.c  sdk_config.h
cmake/: nrf5.cmake  nrf5_app.cmake  nrf5_ble.cmake  nrf5_ble_srv.cmake  nrf5_external.cmake  nrf5_external_libs.cmake  nrf5_helpers.cmake  nrf5_misc.cmake
collector/: CMakeLists.txt  Dockerfile  main.cpp  startup.sh
